--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -30,6 +30,14 @@
                        "{'playlist':[{'file':'player/sounds/Senya.mp3'},{'file':'player/sounds/Aikouhenno.mp3'},{'file':'player/sounds/Saika.mp3'},{'file':'player/sounds/Sai.mp3'}]}",
                                     st:"uppodaudio"});
                 </script>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/6.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
     </body>
 </html>
 
